<?xml version="1.0"?>
<package format="2">
  <name>object_detection</name>
  <version>1.0.0</version>
  <description>ROS 2D object detection and semantic segmentation package</description>
  <maintainer email="timea.magyar@mail.com">TimeaMagyar</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>libpcl-all-dev</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <test_depend>rostest</test_depend>
  <export>
  </export>
</package>
